# Paddle-Lite-Demo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
PP_shitu/assets/: download.sh
PP_shitu/ios/PPshitu/: README.md  prepare.sh
PaddleLite-android-demo/app/: build.gradle
PaddleLite-android-demo/camera_preview_demo/app/: build.gradle
PaddleLite-android-demo/camera_preview_demo/app/src/main/cpp/: CMakeLists.txt  Native.cc  Pipeline.cc  Pipeline.h  Utils.h
PaddleLite-android-demo/face_detection_demo/app/: build.gradle
PaddleLite-android-demo/face_keypoints_demo/: README.md
PaddleLite-android-demo/face_keypoints_demo/app/: build.gradle
PaddleLite-android-demo/face_keypoints_detection_demo/: README.md  local.properties
PaddleLite-android-demo/face_keypoints_detection_demo/app/: build.gradle
PaddleLite-android-demo/face_tracking_demo/app/: build.gradle
PaddleLite-android-demo/human_segmentation_demo/app/: build.gradle
PaddleLite-android-demo/image_classification_demo/: README.md
PaddleLite-android-demo/image_classification_demo/app/: build.gradle
PaddleLite-android-demo/image_classification_demo/docs/: README.md
PaddleLite-android-demo/mask_detection_demo/app/: build.gradle
PaddleLite-android-demo/mobilenet_classification_demo/app/: build.gradle
PaddleLite-android-demo/object_detection_demo/app/: build.gradle
PaddleLite-android-demo/ocr_demo/: README.md
PaddleLite-android-demo/simplest_predict_demo/: local.properties
PaddleLite-android-demo/simplest_predict_demo/app/: build.gradle
PaddleLite-android-demo/ssd_detection_demo/: READM.md
PaddleLite-android-demo/ssd_detection_demo/app/: build.gradle
PaddleLite-android-demo/yolo_detection_demo/: local.properties
PaddleLite-android-demo/yolo_detection_demo/app/: build.gradle
PaddleLite-armlinux-demo/: Raspberry-camera.md  download_models_and_libs.sh  enable-camera-on-raspberry-pi.md
PaddleLite-armlinux-demo/Paddle-Lite/include/: paddle_use_kernels.h  paddle_use_ops.h
PaddleLite-armlinux-demo/image_classification_demo/: CMakeLists.txt  image_classification_demo.cc  run.sh
PaddleLite-armlinux-demo/object_detection_demo/: CMakeLists.txt  README.md  object_detection_demo.cc  run.sh
PaddleLite-armlinux-demo/yolo_detection_demo/: CMakeLists.txt  run.sh  yolo_detection_demo.cc
PaddleLite-ios-demo/: download_dependencies.sh
PaddleLite-ios-demo/ios-classification_demo/classification_demo/: Info.plist  ViewController.mm
PaddleLite-ios-demo/ios-classification_demo/classification_demo.xcodeproj/: project.pbxproj
PaddleLite-ios-demo/ios-detection_demo/detection_demo/: AppDelegate.h  README.md  ViewController.mm
PaddleLite-ios-demo/ios-detection_demo/detection_demo.xcodeproj/: project.pbxproj
PaddleLite-ios-demo/ios-ocr_demo/ocr_demo/: ViewController.mm
PaddleLite-ios-demo/ios-ocr_demo/ocr_demo.xcodeproj/: project.pbxproj
face_detection/assets/: download.sh
face_detection/ios/face_detection/: README.md  prepare.sh
face_keypoints_detection/assets/: download.sh
face_keypoints_detection/ios/face_keypoints_detection/: README.md  prepare.sh
human_segmentation/assets/: download.sh
human_segmentation/assets/labels/: label_list
human_segmentation/ios/human_segmentation/: README.md  prepare.sh
image_classification/android/shell/cxx/: CMakeLists.txt  build.sh  image_classification.cc  run.sh
image_classification/android/shell/cxx/image_classification/: CMakeLists.txt  README.md  build.sh  image_classification.cc  run.sh
image_classification/assets/: download.sh
image_classification/assets/images/: test_list.txt
image_classification/assets/labels/: label.txt
image_classification/ios/image_classification/: README.md  prepare.sh
image_classification/linux/: download_models_and_libs.sh
image_classification/linux/mobilenet_v3/: README.md  image_classification.cc  run.sh
ios-classification_demo/classification_demo/: ViewController.h
ios-classification_demo/classification_demo.xcodeproj/: project.pbxproj
ios-classification_demo/classification_demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios-classification_demo/classification_demo/Base.lproj/: Main.storyboard
ios-classification_demo/classification_demo/paddle_lite/: paddle_use_kernels.h
ios-detection_demo/detection_demo/paddle_lite/: paddle_use_kernels.h  paddle_use_ops.h
libs/: download.sh
libs/include/: paddle_use_ops.h
libs/inference_lite_lib.ios64.armv8/include/: paddle_use_kernels.h  paddle_use_ops.h
mask_detection/android/shell/cxx/mask_detection/: CMakeLists.txt  README.md  build.sh  mask_detection.cc  run.sh
mask_detection/assets/: download.sh
mask_detection/ios/image_classification/: README.md
object_detection/assets/: download.sh
object_detection/harmony/object_detection_demo/: .pre-commit-config.yaml  README.md  build.gradle  gradle.properties
object_detection/ios/picodet_demo/: README.md  prepare.sh
object_detection/ios/ssd_mobilenetv1_demo/: README.md  prepare.sh
object_detection/ios/yolov3_mobilenet_v3_demo/: README.md
object_detection/linux/: download_models_and_libs.sh
object_detection/linux/picodet_detection/: CMakeLists.txt  README.md  object_detection_demo.cc  run.sh
ocr/android/shell/ocr_demo/ocr_db_crnn_code/: CMakeLists.txt  pipeline.cc  pipeline.h
ocr/android/shell/ppocr_demo/src/: CMakeLists.txt  clipper.hpp  cls_process.cc  cls_process.h  db_post_process.cc  db_post_process.h  det_process.cc  det_process.h  pipeline.cc  pipeline.h  rec_process.cc  rec_process.h
ocr/assets/: download.sh
ocr/ios/ppocr_demo/: prepare.sh
ocr/linux/app/: download_models_and_libs.sh
ocr/linux/shell/cxx/ocr_db_crnn_demo/: CMakeLists.txt  Makefile.def  README.md  build.sh  prepare.sh  run.sh
ocr/linux/shell/cxx/ocr_db_crnn_demo/ocr_db_crnn_code/: ocr_db_crnn.cc
pose_detection/assets/models/: models.txt
pose_detection/linux/: download_models_and_libs.sh
pose_detection/linux/tiny_pose/: CMakeLists.txt  README.md  (+4 more)
tiny_pose_demo/: .gitignore  README.md
tiny_pose_demo/app/: build.gradle
tools/ci_tools/: android_demo_ci.sh  ci_demo.sh
(+1186 files in other folders)
